@@ -1,3 +1,8 @@
+2008-08-19  Ivan N. Zlatev  <contact@i-nz.net>
+
+	* Make the file path textbox readonly in the New File dialog.
+	[Fixes bug #417617]
+
 2008-07-28  Ivan N. Zlatev  <contact@i-nz.net>
 
 	* Misc fixes and improvements. 
